add test for GoalService